--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": " npm i axios vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
